--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<div class="container">
-    <form (submit)="onSubmit($event)">
-        <input name="login"/>
-        <input name="password"/>
-        <button type="submit">OK</button>
-    </form>
-</div>
+<a routerLink="/main">GO</a>
+<router-outlet></router-outlet>
