--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -1,6 +1,7 @@
 @import "../../../variables.scss";
 
 .link{
+    font-size: 1.2rem;
     color:$rich-color;
     padding: 15px 0 15px 10px;
     outline: none;
