--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row h-100 w-100">
       <div class="col-12 h-100 d-flex justify-content-between">
-        <img src="assets/frog-prince.svg" class="logo h-100" />
+        <img src="assets/frog-prince.svg" routerLink="/main/profile" class="logo h-100" />
         <div class="dropdown h-100">
           <button
             class="btn dropdown-toggle h-100"
