--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,12 +1,12 @@
 <app-header></app-header>
-<div class="container">
-  <div class="row pt-5">
+<div class="container main">
+  <div class="row pt-5 h-100">
     <div class="col-3">
       <p routerLink="profile" class="link mb-0" routerLinkActive="linkActive">Профиль</p>
       <p routerLink="friends" class="link mb-0" routerLinkActive="linkActive">Друзья</p>
       <p routerLink="chat" class="link mb-0" routerLinkActive="linkActive">Сообщения</p>
     </div>
-    <div class="col-9">
+    <div class="col-9 h-100">
       <router-outlet></router-outlet>
     </div>
   </div>
