--- a/src/app/pages/main/profile/profile.component.html
+++ b/src/app/pages/main/profile/profile.component.html
@@ -1,1 +1,43 @@
-<p>profile works!</p>
+<div class="container h-100">
+  <div class="row h-100 justify-content-center position-relative">
+    <div class="col-12 h-50 px-0 text-center position-relative">
+      <img
+        [src]="
+          (userInfo$ | async).avatar === null
+            ? 'assets/default-avatar.jpg'
+            : (userInfo$ | async).avatar
+        "
+        alt="avatar"
+        class="avatar h-100 position-absolute"
+        #ava
+      />
+      <button
+        class="upload-photo btn position-absolute"
+        [ngStyle]="{ left: ava.clientWidth * 0.65 + 'px' }"
+        (click)="photoInput.click()"
+      >
+        +
+      </button>
+      <input
+        #photoInput
+        hidden
+        type="file"
+        accept="image/*"
+        (input)="updateAvatar($event)"
+      />
+    </div>
+    <div class="col-8 h-50">
+      <div class="form-container my-5">
+        <form [formGroup]="form" (ngSubmit)="updateUserInfo($event)">
+          <app-input
+            formControlName="login"
+            name="login"
+            rusName="Логин"
+          ></app-input>
+          <button type="submit" class="btn">Сохранить</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+<app-spinner *ngIf="isLoading$ | async" radius="50"></app-spinner>
