--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -6,7 +6,7 @@
       <p routerLink="friends" class="link mb-0" routerLinkActive="linkActive">Друзья</p>
       <p routerLink="chat" class="link mb-0" routerLinkActive="linkActive">Сообщения</p>
     </div>
-    <div class="col-9 h-100">
+    <div class="col-9 body">
       <router-outlet></router-outlet>
     </div>
   </div>
