--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -4,6 +4,15 @@
     height: 100vh - $header-height;
 }
 
+.body{
+    position: relative;
+    height: 90%;
+    background-color: $light-color;
+    border-radius: 20px;
+    box-shadow: 10px 10px 20px $rich-color;
+    padding: 0;
+}
+
 .link{
     font-size: 1.2rem;
     color:$rich-color;
