--- a/src/app/pages/main/profile/profile.component.html
+++ b/src/app/pages/main/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="container h-100">
+<div class="container h-100 pt-5">
   <div class="row h-100 justify-content-center position-relative">
     <div class="col-12 h-50 px-0 text-center position-relative">
       <img
