--- a/src/app/pages/main/profile/profile.component.scss
+++ b/src/app/pages/main/profile/profile.component.scss
@@ -1,13 +1,8 @@
 @import "../../../../variables.scss";
 
 :host{
-    display: block;
-    position: relative;
-    height: 90%;
-    background-color: $light-color;
-    border-radius: 20px;
-    box-shadow: 10px 10px 20px $rich-color;
-    padding: 5% 0;
+    height: 100%;
+    border-radius: inherit;
 }
 
 .avatar{
@@ -17,6 +12,7 @@
     left: 0;
     right: 0;
     margin: auto;
+    max-width: 90%;
 }
 
 button.upload-photo{
